--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ASV-Agri Export</title>
+    <link rel="icon" type="image/png" href="img/asv_logo.jpg">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
@@ -129,8 +130,8 @@
           <div class="footer_logo logo1">
             <img src="img/asv_logo.jpg" alt="logo"/>
             <span>ASV AgriExport</span><br>
-            <h4>Enok Raj<br><a href="+918825432842">+91 88254 32842</a></h4>
-            <h4>Madesh Rangasamy<br><a href="+919566612356">+91 95666 12356</a></h4>
+            <h4>Enok Raj<br><a href="tel:+918825432842">+91 88254 32842</a></h4>
+            <h4>Madesh Rangasamy<br><a href="tel:+919566612356">+91 95666 12356</a></h4>
             <br>
             <br>
           </div>
@@ -145,6 +146,7 @@
             <li>
               <a href="#"><i class="ri-facebook-fill"></i></a>
             </li>
+            this is a command line
             <li>
               <a href="#"><i class="ri-twitter-fill"></i></a>
             </li>
