added space in home text

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </div>
       </nav>
       <section class="main">
-        <h2 class="heading_1">ASV AGRICULTURE RESEARCH<br>AND EXPORT PRIVATE LIMITED</h2>
-        <h1 class="heading">we provide <br />fresh fruits <br>and vegetables</h1>
+        <h2 class="heading_1">ASV AGRICULTURE RESEARCH<br>AND EXPORT PRIVATE LIMITED</h2><br>
+        <h1 class="heading">we provide <br />fresh fruits <br>and vegetables</h1><br>
         <div class="main_btn">
             <a href="#services"><button class="btn btn1">explore more</button></a>
           <!--<button class="btn btn2">
