updated css, added more info on services

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ASV-Agri Export</title>
+    <title>ASV Agri Export</title>
     <link rel="icon" type="image/png" href="img/asv_logo.jpg">
     <link rel="stylesheet" href="style.css" />
     <link
@@ -55,26 +55,66 @@
       </div>
 
       <div class="boxes">
-        <div class="box">
+        <div class="box b11">
           <img src="img/fruits-i.png" alt="fruits_image" />
           <h4>Fruits</h4>
         </div>
-        <div class="box">
+        <div class="overlay" id="popupOverlay1">
+          <div class="popup">
+            <button class="close-btn" id="closeBtn1">×</button>
+            <h2>Fruits</h2><br>
+            <p class="pp">mangoes <br>bananas <br>apples <br>grapes <br>oranges <br>pineapples <br>papayas <br>pomegranates <br>watermelons <br>guavas <br>lemons <br>avocados <br>lychees <br>dragon fruits <br> kiwi fruits</p>            
+          </div>
+        </div>
+
+        <div class="box b22">
           <img src="img/vegetables-i.png" alt="vegetables_image" />
           <h4>Vegetables</h4>
         </div>
-        <div class="box">
+        <div class="overlay" id="popupOverlay2">
+          <div class="popup">
+            <button class="close-btn" id="closeBtn2">×</button>
+            <h2>Vegetables</h2><br>
+            <p class="pp">onions <br>potatoes <br>tomatoes <br>green chillies <br>garlic <br>ginger <br>okra (lady finger) <br>brinjal (eggplant) <br>bottle gourd <br>bitter gourd <br>cabbage <br>cauliflower <br>carrots <br>drumsticks <br>spinach (palak)</p>
+          </div>
+        </div>
+
+        <div class="box b33">
           <img src="img/spices-i.png" alt="spices_image" />
           <h4>Spices</h4>
         </div>
-        <div class="box">
+        <div class="overlay" id="popupOverlay3">
+          <div class="popup">
+            <button class="close-btn" id="closeBtn3">×</button>
+            <h2>Spices</h2><br>
+            <p class="pp">turmeric <br>coriander seeds <br>cumin seeds <br>cardamom (green and black) <br>cloves <br>black pepper <br>red chilli (whole and powder) <br>fennel seeds <br>fenugreek seeds <br>mustard seeds <br>cinnamon <br>bay leaves <br>nutmeg and mace <br>asafoetida (hing) <br>caraway (shah jeera)</p>
+          </div>
+        </div>
+
+        <div class="box b44">
           <img src="img/lentils.png" alt="lentils_image" />
           <h4>Lentils</h4>
         </div>
-        <div class="box">
+        <div class="overlay" id="popupOverlay4">
+          <div class="popup">
+            <button class="close-btn" id="closeBtn4">×</button>
+            <h2>Lentils</h2><br>
+            <p class="pp">toor dal (pigeon pea) <br>chana dal (split Bengal gram) <br>masoor dal (red lentil) <br>moong dal (green gram) <br>urad dal (black gram) <br>kabuli chana (white chickpeas) <br>desi chana (brown chickpeas) <br>rajma (kidney beans) <br>lobia (black-eyed peas) <br>horse gram (kulthi dal) <br>moth beans <br>green peas (dried) <br>masoor whole (brown lentil) <br>moong whole <br>urad whole</p>
+          </div>
+        </div>
+
+        <div class="box b55">
           <img src="img/coconut.jpg" alt="coconut_image" />
           <h4>Coconut</h4>
         </div>
+        <div class="overlay" id="popupOverlay5">
+          <div class="popup">
+            <button class="close-btn" id="closeBtn5">×</button>
+            <h2>Coconut</h2><br>
+            <p class="pp">Pure, natural, and full of goodness — our coconuts are nature’s gift to the world.</p>
+          </div>
+        </div>
+
       </div>
     </section>
 
